--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
 						l++
 					)
 						(r = n[l]),
-							Object.prototype.hasOwnProperty.call(c, r) &&
-								c[r] &&
-								i.push(c[r][0]),
-							(c[r] = 0);
+							Object.prototype.hasOwnProperty.call(a, r) &&
+								a[r] &&
+								i.push(a[r][0]),
+							(a[r] = 0);
 					for (t in o)
 						Object.prototype.hasOwnProperty.call(o, t) &&
 							(f[t] = o[t]);
 					for (s && s(e); i.length; ) i.shift()();
-					return p.push.apply(p, u || []), a();
+					return c.push.apply(c, u || []), p();
 				}
-				function a() {
-					for (var e, t = 0; t < p.length; t++) {
-						for (var r = p[t], n = !0, o = 1; o < r.length; o++) {
+				function p() {
+					for (var e, t = 0; t < c.length; t++) {
+						for (var r = c[t], n = !0, o = 1; o < r.length; o++) {
 							var u = r[o];
-							0 !== c[u] && (n = !1);
+							0 !== a[u] && (n = !1);
 						}
-						n && (p.splice(t--, 1), (e = l((l.s = r[0]))));
+						n && (c.splice(t--, 1), (e = l((l.s = r[0]))));
 					}
 					return e;
 				}
 				var r = {},
-					c = { 1: 0 },
-					p = [];
+					a = { 1: 0 },
+					c = [];
 				function l(e) {
 					if (r[e]) return r[e].exports;
 					var t = (r[e] = { i: e, l: !1, exports: {} });
@@ -129,9 +129,9 @@
 				(t.push = e), (t = t.slice());
 				for (var o = 0; o < t.length; o++) e(t[o]);
 				var s = n;
-				a();
+				p();
 			})([]);</script
 		><script src="./static/js/2.12bbfa6e.chunk.js"></script
-		><script src="./static/js/main.be742831.chunk.js"></script>
+		><script src="./static/js/main.540f80b7.chunk.js"></script>
 	</body>
 </html>
